# production-mlops-ecosystem

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  class_similarity_checker.py  evaluate_rag.py  explain_failure.py  main.py  manage_knowledge_base.py  pyproject.toml  rag_pipeline.py  test_llm.py  test_logging.py  test_schema.py  validate_batch.py  validate_schema.py
.github/workflows/: ci.yml
sample_data/: 20260409105001114913812_0002.txt
