[project]
name = "production-mlops-ecosystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "openai>=2.43.0",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
]
